# dataset-grid-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  start-desktop.bat
app/: __init__.py  bridge.py  main.py  tools.py  tools.yaml
converters/: pyproject.toml
converters/data/samples/: sample-data.xlsx
converters/src/data2json_converters/: __init__.py  __main__.py  cli.py  confirm_ui.py  converter.py
converters/src/obsidian2json/: __init__.py  cli.py  export_grid.py  import_grid.py
converters/src/obsidian2json/_vendor/: __init__.py  config.py  files.py  models.py  parsers.py  repository.py
grid/data/samples/: sample-data.json
grid/src/: advanced-features.js  app.js  controls.js  desktop-bridge.js  desktop-tools.js  details-panel.js  file-service.js  graph-view.js  index.html  interactions.js  persistence.js  relations.js  server-controls.js  styles.css
reports/: publishable_files.txt  scan_report.md
