[project]
name = "data-visualization-grid"
version = "0.1.0"
description = "Data visualization grid with optional FastAPI server"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
]
desktop = [
    "PySide6>=6.5",
    "PySide6-WebEngine>=6.5",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["converters/tests"]