[project]
name = "data-visualization-grid"
version = "0.1.0"
description = "Data visualization grid with desktop app and Excel converters"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
desktop = [
    "PySide6>=6.5; python_version<'3.14'",
    "PySide6-WebEngine>=6.5; python_version<'3.14'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["converters/tests"]